--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,67 +1,81 @@
 .header {
-  padding: 20px 0px;
-  height: 80px;
+  /* padding: 20px 0px; */
 }
 .header::after {
   content: "";
   display: block;
   width: 100%;
-  padding: 0px;
-  margin: 0px;
   position: absolute;
   border-bottom: 1px solid #808080;
 }
 
 .container {
-  width: 80%;
-  height: 100%;
-
+  width: 1350px;
   margin: auto;
-  display: flex;
-  align-items: center;
 }
-
-.header__logo {
+.content {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 51px;
-  flex-basis: 15%;
+}
+.header__logo {
+  margin-right: 80px;
+  height: 80px;
+}
+.header__logo img {
+  height: 30px;
+  width: 30px;
+  padding: 24px 0px;
 }
 
 .header__search {
-  flex-basis: 40%;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  height: 48px;
-  display: flex;
+  width: 460px;
+  margin-right: 190px;
+  padding: 16px 10px;
+  height: 100%;
   background-color: white;
 }
-.search_btn {
-  background-color: white;
-  border-radius: 4px 0px 0px 4px;
-  border-right: none;
-  box-shadow: none;
-}
-#site-search {
+
+.header__search_wrapper {
   width: 100%;
-  border-left: none;
-
-  border-radius: 0px 4px 4px 0px;
+  border: 2px solid black;
+  position: relative;
+}
+.header__search_wrapper::before {
+  content: url("./search.svg");
+  display: inline-block;
+  padding: 13px 16px 13px 16px;
+  width: 20px;
+  height: 22px;
+  margin: 0px;
+  position: absolute;
 }
 
-.header_menu {
-  flex-basis: 40%;
-  height: 24px;
+.header__search_wrapper input {
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  line-height: 24px;
+  border: none;
+  padding: 13px 10px 13px 40px;
 }
-.menu_links {
+
+.header__menu {
+  padding: 28px 0px;
+  margin-left: auto;
+}
+.header__menu li {
+  text-decoration: none;
+  list-style: none;
+  display: inline-block;
+  margin-right: 30px;
+}
+.header__menu_links {
   font-size: 14px;
   line-height: 24px;
-  margin-right: 8px;
+  margin-right: 30px;
   text-decoration: none;
   color: black;
 }
 
-.menu_links:last-child {
+.header__menu_links:last-child {
   margin-right: 0;
 }
