--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -14,6 +14,7 @@
 .main__seeAll {
   text-align: right;
   color: black;
+  margin-bottom: 24px;
 }
 .main__seeAll a {
   color: black;
@@ -32,6 +33,7 @@
   border: 1px solid #cccccc;
   border-radius: 5px;
 }
+
 .columns__title {
   font-size: 17px;
   line-height: 20px;
@@ -40,11 +42,50 @@
   padding-top: 10px;
 }
 
+.experiences__title {
+  margin-bottom: 0;
+}
 .explore__columns__column img {
   width: 96px;
   height: 72px;
 }
 
-.experiences__title {
-  margin-bottom: 0;
+.experiences__columns {
+  display: flex;
+  column-gap: 9px;
+}
+.experiences__column_img {
+  margin-bottom: 8px;
+}
+.experiences__column_img img {
+  width: 220px;
+  height: 320px;
+}
+.experiences__column_price {
+  text-align: start;
+  margin-bottom: 6px;
+}
+.experiences__column_price h5 {
+  display: inline-block;
+  margin: 0;
+  margin-right: 4px;
+  font-size: 15px;
+  line-height: 18px;
+}
+.experiences__column_price span {
+  font-size: 15px;
+  line-height: 18px;
+}
+.experiences__column_rating {
+  text-align: start;
+}
+.experiences__column_star {
+  display: inline-block;
+  margin-right: 8px;
+}
+.experiences__column_star img {
+  margin-right: 4px;
+}
+.experiences__column_star img:last-child {
+  margin-right: 0;
 }
