--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,45 +1,9 @@
 .header {
   margin-bottom: 50px;
-}
-.header::after {
-  content: "";
-  display: block;
-  width: 100%;
-  position: absolute;
-  border-bottom: 1px solid #808080;
+  box-shadow: 0px 0.5px 0px rgba(72, 72, 72, 0.3);
 }
 
-/* .container {
-  width: 1350px;
-  margin: auto;
-} */
-.content {
-  display: flex;
-}
-.header__logo {
-  margin-right: 80px;
-  height: 80px;
-}
-.header__logo img {
-  height: 30px;
-  width: 30px;
-  padding: 24px 0px;
-}
-
-.header__search {
-  width: 460px;
-  margin-right: 190px;
-  padding: 16px 10px;
-  height: 100%;
-  background-color: white;
-}
-
-.header__search_wrapper {
-  width: 100%;
-  border: 2px solid black;
-  position: relative;
-}
-.header__search_wrapper::before {
+/* .header__search_wrapper::before {
   content: url("./search.svg");
   display: inline-block;
   padding: 13px 16px 13px 16px;
@@ -47,7 +11,7 @@
   height: 22px;
   margin: 0px;
   position: absolute;
-}
+} */
 
 .header__search_wrapper input {
   width: 100%;
@@ -67,13 +31,6 @@
   list-style: none;
   display: inline-block;
   margin-right: 30px;
-}
-.header__menu_links {
-  font-size: 14px;
-  line-height: 24px;
-  margin-right: 30px;
-  text-decoration: none;
-  color: black;
 }
 
 .header__menu_links:last-child {
