--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -5,6 +5,7 @@
   display: flex;
   padding: 48px 0px 75px 0px;
 }
+
 .footer_right {
   display: flex;
 }
@@ -31,6 +32,14 @@
   line-height: 18px;
 }
 
+.footer__language {
+  margin-bottom: 20px;
+}
+
+.footer_select {
+  width: 250px;
+  height: 48px;
+}
 .footer__links {
   padding-bottom: 10px;
   display: flex;
@@ -68,3 +77,18 @@
 }
 .footer__links_right li img {
 }
+
+/* 
+<div className="footer__links_right">
+            <ul>
+              <li>
+                <a href="#">Terms</a>
+              </li>
+              <li>
+                <a href="#">Privacy</a>
+              </li>
+              <li>
+                <a href="#">Site map</a>
+              </li>
+            </ul>
+          </div> */
