--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url(//db.onlinewebfonts.com/c/b0bc116d1147a46e14ddecc083e553b7?family=Circular+Air+Light);
+
 body {
   margin: 0;
   color: #383838;
@@ -6,6 +7,7 @@ body {
   line-height: 24px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Circular Air Light";
 }
 
 code {
